ent user and rolename and update proto gen
